--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .background {
@@ -15,8 +15,8 @@ body {
 }
 
 .content {
-    background-color: rgba(255, 254, 254, 0.601); /* Adjust the transparency and color as needed */
-    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.827); /* Adjust the transparency and color as needed */
+    padding: 20px;
     border-radius: 30px;
     text-align: center;
     max-width: 500px;
@@ -25,15 +25,25 @@ body {
 header h1 {
     font-size: 2.0em;
     margin-bottom: 0.5em;
+    color: #e95aff;
 }
 
 header p {
     font-size: 1.2em;
-    color: #626262;
+    color: #c1c1c1;
 }
 
-section {
-    margin: 20px 0;
+section h2{
+    margin: 5px 0;
+    color: #e95aff;
+}
+
+section p{
+    color: #fff;
+}
+
+section a{
+    color: #e95aff;
 }
 
 footer {
