--- a/style.css
+++ b/style.css
@@ -12,6 +12,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: moveBackground 50s linear infinite;
+}
+
+@keyframes moveBackground {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
 }
 
 .content {
